<resources>
    <string name="app_name">Weathora</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="invalid_city">Please enter a valid US city name</string>
    <string name="pref_full_temp_type_f_title">Temperature in Fahrenheit</string>
    <string name="pref_full_temp_type_f_label">Show temperature in Fahrenheit</string>
    <string name="pref_about_title">About Weathora</string>
    <string name="pref_about_label">Know more about Weathora</string>
    <string name="pref_header_view">View</string>
    <string name="label_underconstruction">Under Construction</string>
    <string name="action_search_cancelled">The user canceled the operation</string>
    <string name="version">Version</string>
    <string name="report_bugs">Report bugs</string>
    <string name="report_bugs_summary">Report bugs or request new features.</string>
    <string name="join_community">Join the Google Plus community</string>
    <string name="join_community_summary">If you need help or have questions, the Space community on Google Plus is a good place to go.</string>
    <string name="rate_on_google_play">Rate</string>
    <string name="rate_on_google_play_summary">Leave a positive rating on Google Play Store.</string>
    <string name="developer">Developer</string>
    <string name="copy_right">Copyright \u00a9 2016-2017 Tuhin Jana</string>
    <string name="pref_header_social">Social</string>
    <string name="email_subject">Feedback: \u0020</string>
    <string name="email_body">Feedback:\u0020</string>
    <string name="contact_dev">Contact us</string>
    <string name="licenses">Licenses</string>
    <string name="label_temp_f">%1$.0f°F</string>
    <string name="label_temp_c">%1$.0f°C</string>
    <string name="label_wind"><![CDATA[<b>Wind: </b>]]>%1$.2f mph</string>
    <string name="label_pressure"><![CDATA[<b>Pressure: </b>]]>%1$.0f inHg</string>
    <string name="label_humidity"><![CDATA[<b>Humidity: </b>]]>%1$s %%</string>
    <string name="label_sunrise"><![CDATA[<b>Sunrise: </b>]]>%1$s</string>
    <string name="label_sunset"><![CDATA[<b>Sunset: </b>]]>%1$s</string>
    <string name="weather_query_to_format" translatable="false">%1$s,%2$s,%3$s</string>
    <string name="weather_icon_query_to_format" translatable="false">%1$s.png</string>
</resources>
