<?xml version="1.0" encoding="utf-8" ?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:prefseek="http://schemas.android.com/apk/res-auto"
	android:persistent="true">
	<android.support.v7.preference.PreferenceCategory android:title="@string/pref_header_view" >
		<android.support.v7.preference.SwitchPreferenceCompat
			android:key="pref_key_temp_type_f"
			android:title="@string/pref_full_temp_type_f_title"
			android:summary="@string/pref_full_temp_type_f_label"
			android:defaultValue="true" />
		<Preference
			android:title="divider"
			android:selectable="false"
			android:layout="@layout/divider_preference"/>
	</android.support.v7.preference.PreferenceCategory>
	<android.support.v7.preference.PreferenceCategory android:title="@string/action_about" >
		<android.support.v7.preference.PreferenceScreen
			android:key="pref_key_about"
			android:title="@string/pref_about_title"
			android:summary="@string/pref_about_label">
		</android.support.v7.preference.PreferenceScreen>
		<Preference
			android:title="divider"
			android:selectable="false"
			android:layout="@layout/divider_preference"/>
	</android.support.v7.preference.PreferenceCategory>
 </android.support.v7.preference.PreferenceScreen>
