<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:text="@string/pref_header_social"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#455A64" />
        <LinearLayout
            android:id="@+id/reportBugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <com.tuhin.weathora.widgets.IconImageView
                android:id="@+id/iconBugReport"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_bug_report_white_24dp"
                tools:ignore="ContentDescription,UnusedAttribute" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_bugs"
                    android:textColor="@color/about_text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_bugs_summary"
                    android:textColor="@color/about_text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/joinGooglePlusCommunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <com.tuhin.weathora.widgets.IconImageView
                android:id="@+id/iconGooglePlusCommunity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_google_circles_communities_white_24dp"
                tools:ignore="ContentDescription,UnusedAttribute" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_community"
                    android:textColor="@color/about_text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/about_text_color"
                    android:text="@string/join_community_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rateOnGooglePlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <com.tuhin.weathora.widgets.IconImageView
                android:id="@+id/iconRate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_star_white_24dp"
                tools:ignore="ContentDescription,UnusedAttribute" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_on_google_play"
                    android:textColor="@color/about_text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/about_text_color"
                    android:text="@string/rate_on_google_play_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>